fixed vertical alignment on FAQ's

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -72,18 +72,12 @@
 
 // faq
 
-.faq-top-question-buffer {
-  margin-top: 2%;
-  margin-bottom: 5%
+.faq-large-buffer {
+  margin-bottom: 5%;
 }
 
-.faq-content-buffer {
-  margin-bottom: 15%;
-}
-
-.faq-question-buffer {
-  margin-bottom: 35%;
-  margin-top: 70%;
+.faq-small-buffer {
+  margin-bottom: 2%;
 }
 
 // footer
